# pomodoro-hourglass

./: .gitignore  CMakeLists.txt  README.md  regenerate_history.ps1
src/: .gitignore  README.md  ansi.h  config.h  main.cpp  pomodoro.cpp  proposed_structure.md  renderer.cpp  renderer.h  splash.cpp  splash.h  term.h  timer.cpp  timer.h
